Wed Apr 18 23:07:45 BST 2007  Olly Betts <olly@survex.com>

	* api/omenquire.cc,common/multimatch.h,common/omenquireinternal.h,
	  include/xapian/enquire.h,matcher/Makefile.mk,
	  matcher/biaspostlist.h,matcher/multimatch.cc,net/remoteserver.cc:
	  Remove Enquire::set_bias().
	* docs/deprecation.rst: Update wrt Enquire::set_bias().  Fix typo.

Wed Apr 18 18:51:42 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Require autoconf 2.60 or newer.  Drop docdir
	  compatibility hack which is no longer required.
	* HACKING: Document requirement.  Fix typo (or out-of-date info) for
	  automake requirement (we require 1.9.5 not 1.8.5).

Wed Apr 18 18:27:35 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/deprecation.rst: Note the deprecation of get_description()
	  methods for Python.

Wed Apr 18 14:57:03 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* HACKING: Minimal changes to make this into valid restructured
	  text.

Wed Apr 18 11:27:57 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* configure.ac: Require autoconf version 2.59c or later:
	  AC_TYPE_SSIZE_T isn't present in earlier versions.

Wed Apr 18 11:08:13 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/deprecation.rst: Fix table formatting error

Wed Apr 18 01:32:48 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/deprecation.rst: Update with methods which have been removed
	  from the bindings.

Wed Apr 18 00:24:00 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/deprecation.rst: Move methods which have just been removed
	  from the list of deprecated methods to the list of removed
	  methods.

Tue Apr 17 23:58:53 BST 2007  Olly Betts <olly@survex.com>

	* api/omdocument.cc,api/omenquire.cc,api/omquery.cc,include/xapian/,
	  languages/stem.cc,tests/api_db.cc: Remove methods we're deprecating
	  for 1.0.

Tue Apr 17 23:50:06 BST 2007  Richard Boulton <richard@lemurconsulting.com>
